--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^2.0.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-filter": "^5.0.0",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.5",
     "gulp-plumber": "^1.1.0",
+    "gulp-progeny": "^0.4.0",
     "gulp-stylus": "^2.6.0",
     "gulp-webserver": "^0.9.1",
     "kouto-swiss": "^1.1.0"
