--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-plumber": "^1.1.0",
     "gulp-progeny": "^0.4.0",
     "gulp-stylus": "^2.6.0",
+    "gulp-util": "^3.0.8",
     "gulp-webserver": "^0.9.1",
-    "kouto-swiss": "^1.1.0"
+    "kouto-swiss": "^1.1.0",
+    "webpack": "^2.3.2"
   }
 }
